[project]
name = "stingle-photos-toolkit"
version = "0.1.0"
description = "A Python toolkit to interact with Stingle Photos database and data files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitarray>=3.0.0",
    "boto3>=1.35.94",
    "libnacl>=2.1.0",
    "mysql-connector-python>=9.1.0",
    "pynacl>=1.5.0",
]
